@@ -3368,11 +3368,28 @@ argument_list|)
 expr_stmt|;
 name|appReportStr
 operator|.
-name|print
+name|println
 argument_list|(
 name|appReport
 operator|.
 name|getDiagnostics
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|appReportStr
+operator|.
+name|print
+argument_list|(
+literal|"\tUnmanaged Application : "
+argument_list|)
+expr_stmt|;
+name|appReportStr
+operator|.
+name|print
+argument_list|(
+name|appReport
+operator|.
+name|isUnmanagedApp
 argument_list|()
 argument_list|)
 expr_stmt|;
