@@ -2727,6 +2727,52 @@ name|s
 argument_list|)
 return|;
 block|}
+annotation|@
+name|Override
+DECL|method|isUnmanagedApp ()
+specifier|public
+name|boolean
+name|isUnmanagedApp
+parameter_list|()
+block|{
+name|ApplicationReportProtoOrBuilder
+name|p
+init|=
+name|viaProto
+condition|?
+name|proto
+else|:
+name|builder
+decl_stmt|;
+return|return
+name|p
+operator|.
+name|getUnmanagedApplication
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|setUnmanagedApp (boolean unmanagedApplication)
+specifier|public
+name|void
+name|setUnmanagedApp
+parameter_list|(
+name|boolean
+name|unmanagedApplication
+parameter_list|)
+block|{
+name|maybeInitBuilder
+argument_list|()
+expr_stmt|;
+name|builder
+operator|.
+name|setUnmanagedApplication
+argument_list|(
+name|unmanagedApplication
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
