@@ -373,6 +373,10 @@ operator|.
 name|DEFAULT_APPLICATION_TYPE
 argument_list|,
 literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|false
 argument_list|)
 decl_stmt|;
 return|return
