@@ -1760,6 +1760,11 @@ name|type
 init|=
 literal|null
 decl_stmt|;
+name|boolean
+name|unmanagedApplication
+init|=
+literal|false
+decl_stmt|;
 name|long
 name|createdTime
 init|=
@@ -1991,6 +1996,8 @@ argument_list|,
 literal|null
 argument_list|,
 name|appTags
+argument_list|,
+name|unmanagedApplication
 argument_list|)
 argument_list|,
 name|appViewACLs
@@ -2076,6 +2083,38 @@ argument_list|)
 operator|.
 name|toString
 argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|entityInfo
+operator|.
+name|containsKey
+argument_list|(
+name|ApplicationMetricsConstants
+operator|.
+name|UNMANAGED_APPLICATION_ENTITY_INFO
+argument_list|)
+condition|)
+block|{
+name|unmanagedApplication
+operator|=
+name|Boolean
+operator|.
+name|parseBoolean
+argument_list|(
+name|entityInfo
+operator|.
+name|get
+argument_list|(
+name|ApplicationMetricsConstants
+operator|.
+name|UNMANAGED_APPLICATION_ENTITY_INFO
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+argument_list|)
 expr_stmt|;
 block|}
 if|if
@@ -2523,6 +2562,8 @@ argument_list|,
 literal|null
 argument_list|,
 name|appTags
+argument_list|,
+name|unmanagedApplication
 argument_list|)
 argument_list|,
 name|appViewACLs
