@@ -796,6 +796,14 @@ name|app
 operator|.
 name|getApplicationTags
 argument_list|()
+argument_list|,
+name|app
+operator|.
+name|getApplicationSubmissionContext
+argument_list|()
+operator|.
+name|getUnmanagedAM
+argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1485,6 +1493,20 @@ argument_list|,
 name|event
 operator|.
 name|getAppTags
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|entityInfo
+operator|.
+name|put
+argument_list|(
+name|ApplicationMetricsConstants
+operator|.
+name|UNMANAGED_APPLICATION_ENTITY_INFO
+argument_list|,
+name|event
+operator|.
+name|isUnmanagedApp
 argument_list|()
 argument_list|)
 expr_stmt|;
