@@ -146,6 +146,24 @@ name|api
 operator|.
 name|records
 operator|.
+name|ApplicationSubmissionContext
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|api
+operator|.
+name|records
+operator|.
 name|Container
 import|;
 end_import
@@ -1110,6 +1128,31 @@ argument_list|(
 name|ApplicationMetricsConstants
 operator|.
 name|QUEUE_ENTITY_INFO
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+name|app
+operator|.
+name|getApplicationSubmissionContext
+argument_list|()
+operator|.
+name|getUnmanagedAM
+argument_list|()
+argument_list|,
+name|entity
+operator|.
+name|getOtherInfo
+argument_list|()
+operator|.
+name|get
+argument_list|(
+name|ApplicationMetricsConstants
+operator|.
+name|UNMANAGED_APPLICATION_ENTITY_INFO
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -2760,6 +2803,42 @@ operator|.
 name|thenReturn
 argument_list|(
 name|appTags
+argument_list|)
+expr_stmt|;
+name|ApplicationSubmissionContext
+name|asc
+init|=
+name|mock
+argument_list|(
+name|ApplicationSubmissionContext
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|when
+argument_list|(
+name|asc
+operator|.
+name|getUnmanagedAM
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+name|when
+argument_list|(
+name|app
+operator|.
+name|getApplicationSubmissionContext
+argument_list|()
+argument_list|)
+operator|.
+name|thenReturn
+argument_list|(
+name|asc
 argument_list|)
 expr_stmt|;
 return|return
